MDEV-10355 Weird error message upon CREATE TABLE with DEFAULT

Fixed handling of default values with cached temporal functions so that the
CREATE TABLE statement now succeeds.
Added cleanup of cached values to trigger their reevaluation.
Fixed the error message.
Added quoting of date/time values in cases when this was omitted.
Added a test case.
Updated test result files that include date/time values that were
previously unquoted.